# neko-ai

./: CONTRIBUTING.md  Cargo.toml  README.md  readme
neko-core/: CHANGELOG.md  Cargo.toml  README.md
neko-core/examples/: agent.rs  agent_with_context.rs  agent_with_eternalai.rs  agent_with_grok.rs  agent_with_loaders.rs  agent_with_ollama.rs  agent_with_tools.rs  anthropic_agent.rs  calculator_chatbot.rs  chain.rs  cohere_connector.rs  debate.rs  extractor.rs  gemini_agent.rs  gemini_embeddings.rs  loaders.rs  multi_agent.rs  multi_extract.rs  perplexity_agent.rs  rag.rs  rag_dynamic_tools.rs  sentiment_classifier.rs  simple_model.rs  vector_search.rs  vector_search_cohere.rs  xai_embeddings.rs
neko-core/rig-core-derive/: Cargo.toml
neko-core/src/: agent.rs  completion.rs  extractor.rs  lib.rs  tool.rs
neko-core/tests/: embed_macro.rs
neko-lancedb/: CHANGELOG.md  Cargo.toml  README.md
neko-lancedb/examples/: vector_search_local_ann.rs  vector_search_local_enn.rs  vector_search_s3_ann.rs
neko-lancedb/src/: lib.rs
neko-lancedb/src/utils/: deserializer.rs  mod.rs
neko-lancedb/tests/: integration_tests.rs
neko-lancedb/tests/fixtures/: lib.rs
neko-mongodb/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
neko-mongodb/examples/: vector_search_mongodb.rs
neko-mongodb/src/: lib.rs
neko-mongodb/tests/: integration_tests.rs
neko-neo4j/: CHANGELOG.md  Cargo.toml  README.md
neko-qdrant/: CHANGELOG.md  Cargo.toml  README.md
neko-qdrant/examples/: qdrant_vector_search.rs
neko-qdrant/src/: lib.rs
neko-qdrant/tests/: integration_tests.rs
neko-sqlite/: CHANGELOG.md  Cargo.toml  README.md
(+33 files in other folders)
