[package]
name = "neko-qdrant"
version = "0.1.5"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "neko vector store index integration for Qdrant. https://qdrant.tech"
repository = "https://github.com/0xPlaygrounds/neko"

[dependencies]
neko-core = { path = "../neko-core", version = "0.6.1" }
serde_json = "1.0.128"
serde = "1.0.210"
qdrant-client = "1.12.1"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
anyhow = "1.0.89"
testcontainers = "0.23.1"
httpmock = "0.7.0"

[[example]]
name = "qdrant_vector_search"
required-features = ["neko-core/derive"]


[[test]]
name = "integration_tests"
required-features = ["neko-core/derive"]
